Bug 96162 - Crash on handling frame in Navigator
Summary: Crash on handling frame in Navigator
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.beta1
Hardware: All All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:5.2.0 target:5.1.0.1
Keywords: bibisected, bisected, regression
: 96187 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-30 22:48 UTC by Regina Henschel
Modified: 2016-10-25 19:11 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Instruction inside (13.19 KB, application/vnd.oasis.opendocument.text)
2015-11-30 22:48 UTC, Regina Henschel
Details
valgrind trace of deletion of SwContent (12.03 KB, text/plain)
2015-12-01 22:29 UTC, Michael Stahl
Details
same crash with headings (23.92 KB, application/vnd.oasis.opendocument.text)
2015-12-02 05:55 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2015-11-30 22:48:03 UTC
Created attachment 120905 [details]
Instruction inside

The attached document contains a frame. Open attached frame and follow the instructions.

LibreOffice crashes every time, when you use the entry of the frame in the Navigator. It crashes on double-click and when you use an item from the context menu Text Frame.

I use Version: 5.2.0.0.alpha0+
Build ID: a8860122fecbaa932a48f41a38077f621275be9d
Threads 4; Ver: Windows 6.1; Render: default;
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-11-27_10:34:00
Locale: de-DE (de_DE)
Comment 1 Regina Henschel 2015-11-30 22:55:48 UTC
It is OK in Version: 5.1.0.0.alpha1+
Build ID: 2511a21841dd9dec735a53add8174e47d24deb88
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-10-13_23:26:46
Locale: de-DE (de_DE)
Comment 2 Maxim Monastirsky 2015-11-30 23:22:19 UTC
> 3. Expected behavior: You should see items “Edit”, “Delete”, “Rename”.
> Noticed behavior: You see “Edit”, a blank line, and “Rename”.
This one is already fixed (Bug 96076).

The crash is still reproducible here under Fedora 23 with the latest master.
Comment 3 Michael Stahl 2015-12-01 17:04:26 UTC
bibsect on lo-linux-dbgutil-daily-till51 gives: 186f365a2c541c51e404b1fa819f35c9152adaf1..01de2fc790b50c04f13907026f1a7782009fea61

... this one makes it crash:

commit 536c259cb9644971d0eb0cdfb7d823c5383a5481
Author:     Laurent Godard <lgodard.libre@laposte.net>
AuthorDate: Tue Aug 25 16:38:43 2015 +0200

    tdf#67770 store sidebar elements states
Comment 4 Maxim Monastirsky 2015-12-01 22:24:34 UTC
*** Bug 96187 has been marked as a duplicate of this bug. ***
Comment 5 Michael Stahl 2015-12-01 22:29:55 UTC
Created attachment 120939 [details]
valgrind trace of deletion of SwContent

the problem is that the SwContent that is passed to SwContentTree::GotoContent(SwContent*)
is deleted by re-creating all of the sidebar stuff
Comment 6 Commit Notification 2015-12-01 23:15:35 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=02f2c2f8a160133731d707a8359f5cd576bff434

tdf#96162: sfx2: avoid re-creating existing sidebar Panels

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Jean-Baptiste Faure 2015-12-02 05:52:23 UTC
Same crashes for me with Version: 5.1.0.0.beta1+
Build ID: 63ada88a0fe28440c021141da911f69f7394250d
Threads 4; Ver: 4.2; Render: default; 

Ubuntu_15.10_x86-64
Locale: fr-FR (fr_FR.UTF-8)

Please, backport to 5.1.

Best regards. JBF
Comment 8 Jean-Baptiste Faure 2015-12-02 05:55:33 UTC
Created attachment 120945 [details]
same crash with headings

We have the (probably) same crash with headings: open the attached file and double-click on an heading in the navigator from the sidebar => crash.

Best regards. JBF
Comment 9 Commit Notification 2015-12-02 11:15:06 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9bd618740ea5da9d5077f755530de56f1e913bea&h=libreoffice-5-1

tdf#96162: sfx2: avoid re-creating existing sidebar Panels

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Jean-Baptiste Faure 2015-12-02 11:51:18 UTC
(In reply to Commit Notification from comment #9)
> Michael Stahl committed a patch related to this issue.
> It has been pushed to "libreoffice-5-1":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=9bd618740ea5da9d5077f755530de56f1e913bea&h=libreoffice-5-1
> 
> tdf#96162: sfx2: avoid re-creating existing sidebar Panels
> 
> It will be available in 5.1.0.1.

Thank you very much, this commit fixed the crash for me on LO 5.1 beta1+ : frame, headings and custom animation (duplicate bug 96187). I do not know for the master but I am optimistic. :-)

Version: 5.1.0.0.beta1+
Build ID: 9bd618740ea5da9d5077f755530de56f1e913bea
Threads 4; Ver: 4.2; Render: default; 

built at home under Ubuntu_15.10_x86-64
Locale: fr-FR (fr_FR.UTF-8)

Best regards. JBF
Comment 11 Julien Nabet 2015-12-03 20:16:26 UTC
With master sources updated today, I don't reproduce any of the crashes + I don't reproduce tdf#96187 (set as dup).
Comment 12 Robinson Tryon (qubit) 2015-12-17 10:53:24 UTC Comment hidden (obsolete)