tdf#96162: sfx2: avoid re-creating existing sidebar Panels

Writer's naviagtor crashes when you click on a frame to select it,
because the SwContent* that is passed to SwContentTree::GotoContent()
is deleted because SidebarController::CreatePanels() re-creates
every single panel and then ResetPanels() disposes the existing ones,
which deletes the naviagtor's SwContent instances.

(regression from 536c259cb9644971d0eb0cdfb7d823c5383a5481)

Change-Id: I8f875df816a2d5948026a1d3f30b86bb2418acda
(cherry picked from commit 02f2c2f8a160133731d707a8359f5cd576bff434)